fixed alignment issue

--- a/styles.css
+++ b/styles.css
@@ -107,11 +107,9 @@ footer{
     top:0;
     left:0;
     height: 200px;
-    width: fit-content;
 }
 
 #todoList{
-    display: flex;
     justify-content: left;
     flex-direction: column;
     align-items: center;
